--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="width: fit-content; margin: auto; overflow: hidden;">
     <ngb-carousel *ngIf="images">
         <ng-template ngbSlide>
             <div class="picsum-img-wrapper">
