--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,33 +1,26 @@
-<div style="width: fit-content; margin: auto; overflow: hidden;">
-    <ngb-carousel *ngIf="images">
-        <ng-template ngbSlide>
-            <div class="picsum-img-wrapper">
-                <img class="carousel-image" [src]="images[0]" alt="Random first slide"/>
-            </div>
-            <div class="carousel-caption">
-                <h3>First slide label</h3>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            </div>
-        </ng-template>
-        <ng-template ngbSlide>
-            <div class="picsum-img-wrapper">
-                <img [src]="images[1]" alt="Random second slide" />
-            </div>
-            <div class="carousel-caption">
-                <h3>Second slide label</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-        </ng-template>
-        <ng-template ngbSlide>
-            <div class="picsum-img-wrapper">
-                <img [src]="images[2]" alt="Random third slide" />
-            </div>
-            <div class="carousel-caption">
-                <h3>Third slide label</h3>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
-        </ng-template>
-    </ngb-carousel>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="width: 80%; margin: auto;">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" [src]="images[0]" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" [src]="images[1]" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" [src]="images[2]" alt="Third slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true" ></span>
+            <span class="sr-only">Next</span>
+    </a>
 </div>
-   
-
